--- a/HTML & CSS - 06_2022/index.html
+++ b/HTML & CSS - 06_2022/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Módulo de gestão <head></head></title>
+	<title> Módulo de gestão</title>
+	
 </head>
 <body>
 
