Atualizando o código de HTML - Evoluindo :)

--- a/HTML & CSS - 06_2022/index.html
+++ b/HTML & CSS - 06_2022/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<body>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Módulo de gestão</title>
-	
 </head>
-<body>
+		<header>
+			<h1>Módulo de gestão</h1>
+		<article> Este módulo que estou criando, visa a melhoria contínua para abertura de chamados, é um teste, porém vamos evoluindo conforme o aprendizado no curso.</article>
+
+
+
+		</header>
+	</article>
+
 
 </body>
 </html>
