--- a/HTML & CSS - 06_2022/index.html
+++ b/HTML & CSS - 06_2022/index.html
@@ -7,14 +7,19 @@
 	<title> Módulo de gestão</title>
 </head>
 		<header>
+		<section>
 			<h1>Módulo de gestão</h1>
 		<article> Este módulo que estou criando, visa a melhoria contínua para abertura de chamados, é um teste, porém vamos evoluindo conforme o aprendizado no curso.</article>
 
 
 
 		</header>
-	</article>
+	    </section>
+	    </article>
 
+	    <footer>
+	    	
+	    </footer>
 
 </body>
 </html>
