--- a/HTML & CSS - 06_2022/index.html
+++ b/HTML & CSS - 06_2022/index.html
@@ -7,6 +7,7 @@
 	<title> Módulo de gestão</title>
 </head>
 		<header>
+		<img src="https://ipcdn.freshop.com/resize?url=https://images.freshop.com/00048500019528/1addff7ee96a908e0bc27f2f554a62e2_large.png&width=256&type=webp&quality=80" alt="SUCO DE LIMÃO">
 		<section>
 			<h1>Módulo de gestão</h1>
 		<article> Este módulo que estou criando, visa a melhoria contínua para abertura de chamados, é um teste, porém vamos evoluindo conforme o aprendizado no curso.</article>
@@ -15,6 +16,16 @@
 
 		</header>
 	    </section>
+	    </article>
+	    <p>
+	    	Utilizando o dimensionamento básiso, cores e paletas padrões. Após a evolução contínua, irei formatar de uma forma melhor, para irmos progredindo. Abaixo segue meu repositório do GitHub <a href="https://github.com/rafaeldidt/Crescimento-Profissional" target="_blank">CLIQUE AQUI PARA ACESSAR </a>
+	    <img src="https://1.bp.blogspot.com/-a39nC3bzYZM/YJsh9nMYCnI/AAAAAAAAvoQ/y3qxLvHqvNwQh_-ak3ki7OJRud2u2RLNgCLcBGAsYHQ/s2048/Novo-Tiguan-AllSpace-2022%2B%25282%2529.jpg" alt="FOTO DO TIGUAN DO RAFAEL">
+	    </p>
+
+	    <article>
+	    	
+	    	Segue meu email <a href="mailto:rafael.oliveira.idt@gmail.com"> Email</a>
+
 	    </article>
 
 	    <footer>
