Atualizando alguns códigos HTML

--- a/HTML & CSS - 06_2022/index.html
+++ b/HTML & CSS - 06_2022/index.html
@@ -11,23 +11,23 @@
 		<img src="https://logospng.org/download/volkswagen/logo-volkswagen-256.png" alt="LOGO VOLKWAGEM">
 		<section>
 			<h1 id="title">Módulo de gestão</h1>
-		<article> Este módulo que estou criando, visa a melhoria contínua para abertura de chamados, é um teste, porém vamos evoluindo conforme o aprendizado no curso.</article>
+		<h2 class="texto_pagina"> Este módulo que estou criando, visa a melhoria contínua para abertura de chamados, é um teste, porém vamos evoluindo conforme o aprendizado no curso.</h2>
 
 
 
 		</header>
 	    </section>
 	    </article>
-	    <p>
-	    	Utilizando o dimensionamento básiso, cores e paletas padrões. Após a evolução contínua, irei formatar de uma forma melhor, para irmos progredindo. Abaixo segue meu repositório do GitHub <a href="https://github.com/rafaeldidt/Crescimento-Profissional" target="_blank">CLIQUE AQUI PARA ACESSAR </a>
+	    <p class="texto_2">
+	    	Utilizando o dimensionamento básico, cores e paletas padrões. Após a evolução contínua, irei formatar de uma forma melhor, para irmos progredindo. Abaixo segue meu repositório do GitHub </p> <a href="https://github.com/rafaeldidt/Crescimento-Profissional" target="_blank">CLIQUE AQUI PARA ACESSAR </a>
 	    <img src="https://conteudo.imguol.com.br/c/entretenimento/8a/2018/07/10/volkswagen-t-cross-esboco-1531242540577_v2_450x337.jpg" alt="Carro Volks">
-	    </p>
+	    
 
-	    <article class="CONTATO">
-	    	
-	    	Segue meu email <a href="mailto:rafael.oliveira.idt@gmail.com"> Email</a>
+	    <h3 id="contato">
 
-	    </article>
+	    	Segue meu email <a href="mailto:rafael.oliveira.idt@gmail.com">Email</a>
+
+	    </h3>
 
 	    <footer>
 
